@@ -14,7 +14,8 @@ class ConfigurationActionsFileTransferTest < Test::Unit::TestCase
 
   def test_put_should_delegate_to_upload
     @config.expects(:upload).with { |from, to, opts|
-      from.string == "some data" && to == "test.txt" && opts == { :permissions => 0777 } }
+      from.string == "some data" && to == "test.txt" && opts == { :mode => 0777 } }
+    @config.expects(:run).never
     @config.put("some data", "test.txt", :mode => 0777)
   end
 
@@ -26,6 +27,24 @@ class ConfigurationActionsFileTransferTest < Test::Unit::TestCase
   def test_upload_should_delegate_to_transfer
     @config.expects(:transfer).with(:up, "testl.txt", "testr.txt", :foo => "bar")
     @config.upload("testl.txt", "testr.txt", :foo => "bar")
+  end
+
+  def test_upload_without_mode_should_not_try_to_chmod
+    @config.expects(:transfer).with(:up, "testl.txt", "testr.txt", :foo => "bar")
+    @config.expects(:run).never
+    @config.upload("testl.txt", "testr.txt", :foo => "bar")
+  end
+
+  def test_upload_with_mode_should_try_to_chmod
+    @config.expects(:transfer).with(:up, "testl.txt", "testr.txt", :foo => "bar")
+    @config.expects(:run).with("chmod 775 testr.txt")
+    @config.upload("testl.txt", "testr.txt", :mode => 0775, :foo => "bar")
+  end
+
+  def test_upload_with_symbolic_mode_should_try_to_chmod
+    @config.expects(:transfer).with(:up, "testl.txt", "testr.txt", :foo => "bar")
+    @config.expects(:run).with("chmod g+w testr.txt")
+    @config.upload("testl.txt", "testr.txt", :mode => "g+w", :foo => "bar")
   end
 
   def test_download_should_delegate_to_transfer
